<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/LinearLayoutVertical"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/margin_large">

        <ImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:src="@drawable/ic_payment_success" />

        <TextView
            style="@style/TextViewBoldWrapContent"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/shopping_payment_success_title" />

        <TextView
            style="@style/TextViewBoldWrapContent"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/shopping_payment_success_thank_you" />

        <TextView
            style="@style/TextViewNormalWrapContent"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/margin_medium"
            android:text="@string/shopping_payment_success_content" />

        <Button
            android:id="@+id/btnApply"
            style="@style/BookDetailButtonMatchWidth"
            android:layout_marginTop="@dimen/margin_larger"
            android:background="@drawable/bg_button_authentication"
            android:text="@string/shopping_payment_success_go_to_library"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</layout>